fix CardPost gap in Admin

--- a/frontend/src/Pages/HomePage/Post.scss
+++ b/frontend/src/Pages/HomePage/Post.scss
@@ -248,3 +248,7 @@
   min-width: 400px;
   min-height: 500px;
 }
+
+.slider_admin {
+  
+}
